feat: sync for particular project (inventory-service) and cluster (operational-service) (#205)
* feat: sync for particular project
* feat: add ability sync for particular cluster in operational-service